--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,7 @@
 :root {
   --pikachuyellow: #FAD61D;
+  --pikachucheekred: #F62D14;
+  --pokemonblue: #3B4CCA;
   --squirtleturquoise: #55A3AB;
   --squirtlelightturquoise: #A2D7D5;
   --jigglypuffdarkpink: #E3ABB5;
@@ -60,6 +62,7 @@ h3 {
 
 .pokemon {
   padding: 10px;
-  border-style: dotted;
+  border-style: solid;
   border-width: 4px;
+  border-color: var(--pokemonblue);
 }
