added class for types
added class for pokemontypes

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,9 +55,9 @@ h3 {
 
 .pokedex {
   display: flex;
-  align-items: center;
   justify-content: space-evenly;
   padding: 40px;
+  align-items: stretch;
 }
 
 .pokemon {
@@ -65,4 +65,10 @@ h3 {
   border-style: solid;
   border-width: 4px;
   border-color: var(--pokemonblue);
-}
+  }
+
+.pokemontypes {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  }
