--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,21 @@ h3 {
   margin-bottom: 0;
 }
 
+
+.name.button {
+  background-color: var(--pokemonblue);
+  display: block;
+  width: 30%;
+  border-radius: 4px;
+  }
+
+.name.button:hover {
+  background-color: var(--pokemonblue);
+  display: block;
+  width: 30%;
+  border-radius: 4px;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
 .pokedex {
   display: flex;
   justify-content: space-evenly;
