--- a/css/styles.css
+++ b/css/styles.css
@@ -63,20 +63,48 @@ h3 {
   margin-bottom: 0;
 }
 
-
-.name.button {
-  background-color: var(--pokemonblue);
-  display: block;
-  width: 30%;
-  border-radius: 4px;
+li {
+  display: flex;
+  width: 15%;
+  justify-content: space-around;
   }
 
-.name.button:hover {
+.pokemon-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+.name-button {
+  font-family: 'Fredoka One', cursive;
+  color: #fff;
+  float: left;
   background-color: var(--pokemonblue);
-  display: block;
-  width: 30%;
-  border-radius: 4px;
+  border: 2px solid #fff;
+  width: 100%;
+  font-size: 25px;
+  padding: 28px 16px;
+  border-radius: 6px;
+  opacity: 0.9;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  }
+
+.name-button:hover {
+  font-family: 'Fredoka One', cursive;
+  color: #fff;
+  float: left;
+  background-color: var(--pokemonblue);
+  border: 2px solid #fff;
+  width: 100%;
+  font-size: 25px;
+  padding: 28px 16px;
+  border-radius: 18px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  opacity: 1;
+}
 
 .pokedex {
   display: flex;
