--- a/css/styles.css
+++ b/css/styles.css
@@ -108,3 +108,55 @@ li {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   opacity: 1;
 }
+
+#modal-container {
+  /* do not want container displayed until has is-visible class added */
+  display: none;
+}
+
+#modal-container.is-visible {
+  /* cover whole screen with semi-opaque container when modal is opened */
+  position: fixed;
+  padding: 20px;
+  box-sizing: border-box;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  /* show this over the top of other content */
+  z-index: 999;
+  /* allow scrolling if screen height not enough */
+  overflow: auto;
+  /* center modal within container */
+    display: grid;
+  text-align: center;
+}
+
+.pokemonmodal {
+  /* styling for actual pokemon info modal */
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #fff;
+  padding: 20px;
+  width: 80%;
+  max-width: 500px;
+  text-align: left;
+}
+
+.pokemonmodal h1 {
+  font-family: 'Fira Code', monospace;
+  font-size: 30px;
+  margin-left: 0px;
+}
+
+.pokemonmodal-close {
+  /* 'close' button within pokemon info modal */
+  float: right;
+  -webkit-appearance: none;
+  border: 0;
+  background: var(--jigglypufflightpink);
+  color: 000;
+  text-decoration: underline;
+}
