--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ li {
 .pokemon-list {
   list-style: none;
   display: flex;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
   justify-content: space-evenly;
   align-content: space-between;
 }
