--- a/css/styles.css
+++ b/css/styles.css
@@ -66,16 +66,13 @@ h3 {
 li {
   display: flex;
   flex-flow: row wrap;
-  width: 15%;
   justify-content: space-around;
   }
 
 .pokemon-list {
-  list-style: none;
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-evenly;
-  align-content: space-between;
+  justify-content: space-around;
 }
 
 .name-button {
@@ -84,7 +81,7 @@ li {
   float: left;
   background-color: var(--pokemonblue);
   border: 2px solid #fff;
-  width: 100%;
+  width: 200px;
   font-size: 25px;
   padding: 18px 16px;
   border-radius: 6px;
@@ -102,7 +99,7 @@ li {
   float: left;
   background-color: var(--pokemonblue);
   border: 2px solid #fff;
-  width: 100%;
+  width: 200px;
   font-size: 25px;
   padding: 18px 16px;
   border-radius: 18px;
