--- a/css/styles.css
+++ b/css/styles.css
@@ -66,13 +66,17 @@ h3 {
 li {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: flex-start;
   }
 
 .pokemon-list {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: flex-start;
 }
 
 .name-button {
@@ -90,7 +94,7 @@ li {
   display: inline-block;
   text-decoration: none;
   cursor: pointer;
-  margin-bottom: 8px;
+  margin: 8px;
   }
 
 .name-button:hover {
@@ -105,6 +109,7 @@ li {
   border-radius: 18px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   opacity: 1;
+  margin: 8px;
 }
 
 #modal-container {
